--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
-    "start:production": "tsc && node dist/src/index.js",
+    "start": "next start",
+    "dev": "next dev -p 3002",
     "format": "prettier --write \"src/**/*.(js|ts)\"",
     "flyio": "node dist/src/index.js",
     "start:dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "next build",
     "test": "npx jest --detectOpenHandles --forceExit --openHandlesTimeout=120000 --watchAll=false --testPathIgnorePatterns='src/__tests__/e2e_noAuth/*'",
     "test:local-no-auth": "npx jest --detectOpenHandles --forceExit --openHandlesTimeout=120000 --watchAll=false --testPathIgnorePatterns='src/__tests__/e2e_withAuth/*'",
     "test:prod": "npx jest --detectOpenHandles --forceExit --openHandlesTimeout=120000 --watchAll=false --testPathIgnorePatterns='src/__tests__/e2e_noAuth/*'",
@@ -38,7 +38,11 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "@types/react": "18",
+    "@vercel/node": "^2",
+    "@vitest/coverage-v8": "latest",
+    "semantic-release": "^21"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.5",
@@ -97,13 +101,13 @@
     "wordpos": "^2.1.0",
     "xml2js": "^0.6.2",
     "zod": "^3.23.4",
-    "zod-to-json-schema": "^3.23.0"
+    "zod-to-json-schema": "^3.23.0",
+    "next": "13.4.7",
+    "react": "^18",
+    "react-dom": "^18"
   },
-  "nodemonConfig": {
-    "ignore": [
-      "*.docx",
-      "*.json",
-      "temp"
-    ]
+  "peerDependencies": {
+    "react": ">=18",
+    "react-dom": ">=18"
   }
 }
