--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
-    "lib": ["es6","DOM"],
+    "lib": [
+      "es6",
+      "DOM"
+    ],
     "target": "ES2020", // or higher
     "module": "commonjs",
     "esModuleInterop": true,
@@ -10,8 +13,31 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"],
-    }
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
+    },
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
-  "include": ["src/","src/**/*", "services/db/supabase.ts", "utils/utils.ts", "services/db/supabaseEmbeddings.ts", "utils/EventEmmitter.ts", "src/services/queue-service.ts"]
+  "include": [
+    "src/",
+    "src/**/*",
+    "services/db/supabase.ts",
+    "utils/utils.ts",
+    "services/db/supabaseEmbeddings.ts",
+    "utils/EventEmmitter.ts",
+    "src/services/queue-service.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
