可以正常使用

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": ".",
     "lib": [
       "es6",
       "DOM"
@@ -14,28 +14,24 @@
     "baseUrl": ".",
     "paths": {
       "*": [
-        "node_modules/*",
-        "src/types/*"
+        "*",
+        "src/*"
       ]
     },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    "noEmit": false,
     "incremental": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve"
   },
   "include": [
-    "src/",
     "src/**/*",
-    "services/db/supabase.ts",
-    "utils/utils.ts",
-    "services/db/supabaseEmbeddings.ts",
-    "utils/EventEmmitter.ts",
-    "src/services/queue-service.ts"
+    "services/**/*",
+    "utils/**/*"
   ],
   "exclude": [
     "node_modules"
