--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "18",
     "@vercel/node": "^3",
+    "@vercel/kv": "2.0.0",
     "@vitest/coverage-v8": "latest",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
@@ -42,7 +43,8 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.4.2",
-    "semantic-release": "^21"
+    "semantic-release": "^21",
+    "vercel": "^34"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.5",
